--- a/Mytask-Frontend/vercel.json
+++ b/Mytask-Frontend/vercel.json
@@ -1,6 +1,6 @@
 {
   "builds": [
-    { "src": "index.html", "use": "@vercel/static" }
+    { "src": "package.json", "use": "@vercel/node" }
   ],
   "routes": [
     { "src": "/(.*)", "dest": "/index.html" }
