--- a/Mytask-Frontend/vercel.json
+++ b/Mytask-Frontend/vercel.json
@@ -2,9 +2,7 @@
   "builds": [
     { "src": "package.json", "use": "@vercel/node" }
   ],
-  "routes": [
-    { "src": "/(.*)", "dest": "/index.html" }
-  ],"rewrites":  [
+  "rewrites":  [
       {"source": "/(.*)", "destination": "/"}
     ]
 
