--- a/Mytask-Frontend/vercel.json
+++ b/Mytask-Frontend/vercel.json
@@ -3,14 +3,10 @@
   "builds": [
     {
       "src": "package.json",
-      "use": "@vercel/static-build",
-      "config": { "distDir": "build" }
+      "use": "@vercel/static-build"
     }
   ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/index.html"
-    }
-  ]
+  "rewrites":  [
+      {"source": "/(.*)", "destination": "/"}
+    ]
 }
