--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,14 +5,14 @@
     "deploy": "wrangler deploy --minify src/index.ts"
   },
   "dependencies": {
-    "@prisma/client": "^5.18.0",
+    "@prisma/client": "^5.19.1",
     "@prisma/extension-accelerate": "^1.1.0",
     "cors": "^2.8.5",
-    "hono": "^4.5.6",
-    "prisma": "^5.18.0"
+    "hono": "^4.5.6"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240529.0",
+    "prisma": "^5.19.1",
     "wrangler": "^3.57.2"
   }
 }
