--- a/Backend/package.json
+++ b/Backend/package.json
@@ -7,12 +7,15 @@
   "dependencies": {
     "@prisma/client": "^5.19.1",
     "@prisma/extension-accelerate": "^1.1.0",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
-    "hono": "^4.5.6"
+    "hono": "^4.5.6",
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240529.0",
+    "@types/jsonwebtoken": "^9.0.6",
     "prisma": "^5.19.1",
-    "wrangler": "^3.57.2"
+    "wrangler": "^3.76.0"
   }
 }
